--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.7",
+    "fuse.js": "^7.1.0",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
