not allow withdrawal if trade is open

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.26.3",
     "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
