--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "fuse.js": "^7.1.0",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.525.0",
-    "next": "15.4.3",
+    "next": "^16.0.8",
     "react": "19.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "19.1.0",
